recursion.cons.lessons.recursion.cons.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
	if(l==Nil){
		return Nil;
	}else if(n==0){
		return l.head;
	}else{
		return nth(l.tail,n-1);
	}
}
